--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.2.13"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13"
   }
 }
